Bug 359055 - Broken use case clipboard import from another instance
Summary: Broken use case clipboard import from another instance
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.0 (KDE Applications 15.12.0)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 342207
  Show dependency treegraph
 
Reported: 2016-02-06 10:01 UTC by Ralf Habacker
Modified: 2016-02-08 11:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.2 (KDE Applications 15.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-02-06 10:01:25 UTC
Import  use case from another umbrello instance results into broken xmi file.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. open the xmi file from https://projects.kde.org/projects/kde/kdesdk/umbrello/repository/revisions/master/raw/test/test-BVW.xmi
3. start another umbrello instance
4. open attachment 97017 [details] from bug 342207
5. select the use case diagram in the tree and right click on "copy"
6. Switch to the umbrello instance  from 1., select "use case views" in the tree view and right click on "paste"
 

Actual Results:  
A message box  will be opened complaining about  "..wrong type.." . The use case diagram elements are imported, but several unnamed entries are added to the use case view. After save and reload of the xmi file, all diagrams are gone.


Expected Results:  
The import should not add additional unnamed entries and after save and reload the diagrams should be there.
Comment 1 Ralf Habacker 2016-02-08 10:07:00 UTC
Git commit a9e964db96ce17d2807d713e25bf5d97b88d7188 by Ralf Habacker.
Committed on 08/02/2016 at 10:06.
Pushed by habacker into branch 'master'.

Fix 'Broken use case clipboard import from another instance'.

The bug has been caused by tree view not supporting associations.
Associations in the tree view are saved with type=-1, which prevents
loading diagram entries on xmi file load.
FIXED-IN:2.18.80 (KDE Applications 16.03.80)

M  +6    -0    umbrello/model_utils.cpp
M  +6    -0    umbrello/umllistviewitem.cpp
M  +1    -0    umbrello/umllistviewitem.h
M  +3    -0    umbrello/umlmodel/umlobject.cpp

http://commits.kde.org/umbrello/a9e964db96ce17d2807d713e25bf5d97b88d7188
Comment 2 Ralf Habacker 2016-02-08 11:08:27 UTC
Git commit 4d9ed9bfa02390f1725748409bf0889303d22580 by Ralf Habacker.
Committed on 08/02/2016 at 11:08.
Pushed by habacker into branch 'master'.

Add uses case diagram with events to test to bird view test file.

M  +202  -35   test/test-BVW.xmi

http://commits.kde.org/umbrello/4d9ed9bfa02390f1725748409bf0889303d22580
Comment 3 Ralf Habacker 2016-02-08 11:33:34 UTC
Git commit 5b3ff959e82367124e873ba54e8a3873e56b39bc by Ralf Habacker.
Committed on 08/02/2016 at 11:33.
Pushed by habacker into branch 'Applications/15.12'.

Fix 'Broken use case clipboard import from another instance'.

For the stable branch the fix is to avoid adding associations to the tree view.
FIXED-IN:2.18.2 (KDE Applications 15.12.2)

M  +4    -0    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/5b3ff959e82367124e873ba54e8a3873e56b39bc