Fix 'Broken use case clipboard import from another instance'.

The bug has been caused by tree view not supporting associations.
Associations in the tree view are saved with type=-1, which prevents
loading diagram entries on xmi file load.

BUG:359055
FIXED-IN:2.18.80 (KDE Applications 16.03.80)